# project-link-v1

./: .env  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_gis_data.py  0003_users_and_sessions.py  0004_patients_and_consultations.py  0005_mch_schema.py
backend/app/: main.py  worker.py
backend/app/core/: auth.py  base.py  config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  barangay.py  consultation.py  epi.py  health_station.py  nutrition.py  patient.py  postpartum.py  prenatal.py  user.py  user_session.py
backend/app/repositories/: base.py  consultation.py  patient.py  user.py
backend/app/routers/: admin.py  auth.py  health_station.py  patient.py
backend/app/schemas/: auth.py  consultation.py  epi.py  health_station.py  nutrition.py  patient.py  postpartum.py  prenatal.py  user.py
backend/app/services/: admin.py  auth.py  patient.py
backend/app/tasks/: celery_app.py
backend/fixtures/: bhs_stations.json  cho2-boundaries.geojson
backend/tests/: conftest.py  test_health.py
backend/tests/test_admin/: test_admin_service.py  test_user_create.py
backend/tests/test_auth/: test_auth_guard.py  test_base_repository.py  test_login.py  test_logout.py  test_rbac.py  test_refresh.py  test_security.py  test_unit_auth_layer.py
backend/tests/test_infra/: test_audit_logs.py  test_base_model.py  (+4 more)
(+288 files in other folders)
